<resources>
    <string name="app_name">Medenjaci</string>
    <string name="potvrdi">POTVRDI</string>
    <string name="dobrodosli">Dobrodošli!</string>
    <string name="lozinka">Lozinka</string>
    <string name="korisnicko_ime">Korisničko ime</string>
    <string name="dostupni_proizvodi">Dostupni proizvodi</string>
    <string name="o_korisniku">O korisniku</string>
    <string name="korpa">Korpa</string>
    <string name="ime_i_prezime">Ime i prezime</string>
    <string name="adresa">Adresa</string>
    <string name="telefon">Telefon</string>
    <string name="opis">Opis</string>
    <string name="dodaj_u_korpu">Dodaj u korpu</string>
    <string name="kolicina">Količina</string>
</resources>