<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vini_pu_size4"
    android:scrollbars="vertical"
    tools:context="com.example.pkiProject.user.UserActivity">
    <TextView
        android:id="@+id/labelImeIPrezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#3b025a"
        android:textSize="32dp"
        android:text="@string/ime_i_prezime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="32dp"
        />
    <EditText
        android:id="@+id/txtIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#3b025a"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/labelImeIPrezime"
        android:text="@string/ime_i_prezime"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        />
    <TextView
        android:id="@+id/labelAdresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#3b025a"
        android:textSize="32dp"
        app:layout_constraintTop_toBottomOf="@id/txtIme"
        android:text="@string/adresa"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="32dp"
        />
    <EditText
        android:id="@+id/txtAdresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#3b025a"
        app:layout_constraintTop_toBottomOf="@id/labelAdresa"
        android:text="@string/adresa"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:background="@color/white"
        />
    <TextView
        android:id="@+id/labelTelefon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#3b025a"
        android:textSize="32dp"
        app:layout_constraintTop_toBottomOf="@id/txtAdresa"
        android:text="@string/telefon"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="32dp"
        />
    <EditText
        android:id="@+id/txtTelefon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#3b025a"
        app:layout_constraintTop_toBottomOf="@id/labelTelefon"
        android:text="@string/telefon"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:background="@color/white"
        />
    <TextView
        android:id="@+id/labelKorisnickoIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#3b025a"
        android:textSize="32dp"
        app:layout_constraintTop_toBottomOf="@id/txtTelefon"
        android:text="@string/korisnicko_ime"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="32dp"
        />
    <EditText
        android:id="@+id/txtKorisnickoIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#3b025a"
        app:layout_constraintTop_toBottomOf="@id/labelKorisnickoIme"
        android:text="@string/korisnicko_ime"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:background="@color/white"
        />
    <TextView
        android:id="@+id/labelLozinka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#3b025a"
        android:textSize="32dp"
        app:layout_constraintTop_toBottomOf="@id/txtKorisnickoIme"
        android:text="@string/lozinka"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="32dp"
        />
    <EditText
        android:id="@+id/txtLozinka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#3b025a"
        app:layout_constraintTop_toBottomOf="@id/labelLozinka"
        android:text="@string/lozinka"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:background="@color/white"
        />
    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="bold"
        app:layout_constraintTop_toBottomOf="@id/txtLozinka"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="promeni"/>

</androidx.constraintlayout.widget.ConstraintLayout>